performCommand temp disabled (mixin crash)